k8s/apps/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-ingress
  namespace: adguard
  labels:
    app: adguardhome
  annotations:
    tailscale.com/proxy-class: "high-bandwidth"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: adguard-service
      port:
        number: 80
  tls:
    - hosts:
        - adguard.tail57bf10.ts.net
